Added firebase to android app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
 
+  firebase_core: ^0.4.0
+  firebase_analytics: ^5.0.1
+  firebase_auth:  ^0.14.0
+
+  rxdart: 0.22.02
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
