--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   firebase_storage: ^3.0.6
 
   rxdart: 0.22.02
-  camera:
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +48,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - images/profile.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
