--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
-  provider: ^3.0.0
+  provider: 3.0.0
 
   firebase_core: ^0.4.0
   firebase_analytics: ^5.0.1
