--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,12 +26,14 @@ dependencies:
   http: ^0.12.0+2
   provider: 3.0.0
   shared_preferences: ^0.5.3
+  get_it: ^1.0.3+2
 
   firebase_core: ^0.4.0
   firebase_analytics: ^5.0.1
   firebase_auth:  ^0.14.0
   firebase_messaging: ^5.1.4
   firebase_storage: ^3.0.6
+  cloud_firestore: ^0.12.9
 
   rxdart: 0.22.02
 
