--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  http: ^0.12.0+2
+  # http: ^0.12.0+2
   provider: 3.0.0
   shared_preferences: ^0.5.3
-  get_it: ^1.0.3+2
+  # get_it: ^1.0.3+2
+  connectivity: ^0.4.2
 
   firebase_core: ^0.4.0
-  firebase_analytics: ^5.0.1
+  # firebase_analytics: ^5.0.1
   firebase_auth:  ^0.14.0
   firebase_messaging: ^5.1.4
   firebase_storage: ^3.0.6
