--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,3 +30,14 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.localbroadcastmanager' &&
+                    !details.requested.name.contains('androidx')) {
+                details.useVersion "1.0.0"
+            }
+        }
+    }
+}
